The code compiles successfully. Let me summarize the changes made:
## Summary

The GitHub OAuth callback URL is now fully configurable for production deployments. Here's what was changed:

### 1. Updated `crates/services/src/services/github_oauth.rs`

The `GitHubOAuthConfig::from_env()` method now supports a priority-based configuration:

1. **`GITHUB_REDIRECT_URI`** - Full URL override (highest priority)
2. **`APP_URL`** - Base URL, callback path is auto-appended
3. **Default** - `http://localhost:3000/api/local-auth/github/callback`

### 2. Updated `.env.example`

Added documentation for the new `APP_URL` environment variable and the existing `GITHUB_REDIRECT_URI` option.

### How to Configure for Production

For your EC2 deployment, set one of these in your `.env` file:

**Option A - Using `APP_URL` (recommended):**
```bash
APP_URL=https://your-domain.com
```
This will automatically construct the callback URL as `https://your-domain.com/api/local-auth/github/callback`

**Option B - Using `GITHUB_REDIRECT_URI` (direct override):**
```bash
GITHUB_REDIRECT_URI=https://your-domain.com/api/local-auth/github/callback
```

### GitHub OAuth App Configuration

Remember to update your GitHub OAuth App settings at https://github.com/settings/developers:
- **Homepage URL**: `https://your-domain.com`
- **Authorization callback URL**: `https://your-domain.com/api/local-auth/github/callback`

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,24 @@
 # To enable GitHub SSO authentication:
 # 1. Go to https://github.com/settings/developers
 # 2. Create a new OAuth App with:
-#    - Homepage URL: http://localhost:3000
-#    - Authorization callback URL: http://localhost:3000/api/local-auth/github/callback
+#    - Homepage URL: Your app URL (e.g., http://localhost:3000 or https://your-domain.com)
+#    - Authorization callback URL: {APP_URL}/api/local-auth/github/callback
 # 3. Copy the Client ID and generate a Client Secret
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+# =============================================================================
+# Application URL (for production deployments)
+# =============================================================================
+# The public URL where your app is accessible. Used for OAuth callbacks.
+# For local development, defaults to http://localhost:3000
+# For production, set this to your public domain (e.g., https://your-domain.com)
+
+APP_URL=
+
+# Or you can set the full redirect URI directly:
+# GITHUB_REDIRECT_URI=https://your-domain.com/api/local-auth/github/callback
 
 # =============================================================================
 # Session Security
