Done. Now GitHub OAuth requires both `APP_HOST` (e.g., `http://localhost` or `https://your-domain.com`) and `APP_PORT` (e.g., `3000` or `443`) to be set. The callback URL is built as `{APP_HOST}:{APP_PORT}/api/local-auth/github/callback`.

--- a/.env.example
+++ b/.env.example
@@ -8,20 +8,21 @@
 # 1. Go to https://github.com/settings/developers
 # 2. Create a new OAuth App with:
 #    - Homepage URL: Your app URL (e.g., http://localhost:3000 or https://your-domain.com)
-#    - Authorization callback URL: {APP_URL}/api/local-auth/github/callback
+#    - Authorization callback URL: {APP_HOST}:{APP_PORT}/api/local-auth/github/callback
 # 3. Copy the Client ID and generate a Client Secret
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 
 # =============================================================================
-# Application URL (for production deployments)
+# Application URL (required for GitHub OAuth)
 # =============================================================================
-# The public URL where your app is accessible. Used for OAuth callbacks.
-# For local development, defaults to http://localhost:3000
-# For production, set this to your public domain (e.g., https://your-domain.com)
+# APP_HOST: The scheme and hostname (e.g., http://localhost or https://your-domain.com)
+# APP_PORT: The port number (e.g., 3000 or 443)
+# These are combined to build the OAuth callback URL: {APP_HOST}:{APP_PORT}/api/local-auth/github/callback
 
-APP_URL=
+APP_HOST=
+APP_PORT=
 
 # =============================================================================
 # Session Security
