--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,15 +78,16 @@ jobs:
       - name: Check formatting
         run: cargo fmt --all -- --check
 
+      - name: Clippy
+        run: cargo clippy --all --all-targets -- -D warnings
+
+      # Run after clippy to reuse compiled artifacts
       - name: Check types and DB schemas
         run: |
           npm run generate-types:check
           npm run remote:generate-types:check
           npm run prepare-db:check
           npm run remote:prepare-db:check
-
-      - name: Clippy
-        run: cargo clippy --all --all-targets -- -D warnings
 
   # Backend tests run separately with nextest for speed
   backend-test:
